--- a/developerweek2020/index.html
+++ b/developerweek2020/index.html
@@ -192,7 +192,7 @@ Developers</h1>
 <h2>2  <span style="display:none"> </span> Documentation</h2>
 </div></div>
 <div class="sl-block" data-block-type="text" style="height: auto; width: 600px; left: 85px; top: 121px;" data-block-id="b1928e59b42e3ec5e64ee4781d7ee1b9"><div class="sl-block-content" data-placeholder-tag="p" data-placeholder-text="Text" style="z-index: 12; text-align: left;">
-<h2><span style="font-size:0.7em">Guides/Turorials</span></h2>
+<h2><span style="font-size:0.7em">Guides/Tutorials</span></h2>
 </div></div>
 
 
